b.yml
apiVersion: v1
kind: Service
metadata:
  name: b-service
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: b-deployment
    tier: b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: b-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: b-deployment
      tier: b
  template:
    metadata:
      labels:
        app: b-deployment
        tier: b
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: b
          image:
          ports:
            - containerPort: 8000
