ingress_controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: 2000m
spec:
  tls:
    - hosts:
        - a.domain.com
        - domain.com
        - www.domain.com
      secretName: letsencrypt-nginx
  rules:
    - host: www.domain.com
      http:
        paths:
          - path: /()(.*)
            pathType: Prefix
            f:
              service:
                name: f-service
                port:
                  number: 3000
          - path: /api(/|$)(.*)
            pathType: Prefix
            b:
              service:
                name: b-service
                port:
                  number: 8000
    - host: domain.com
      http:
        paths:
          - path: /()(.*)
            pathType: Prefix
            f:
              service:
                name: f-service
                port:
                  number: 3000
          - path: /api(/|$)(.*)
            pathType: Prefix
            b:
              service:
                name: b-service
                port:
                  number: 8000
  ingressClassName: nginx
